--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/issue_management_system
+spring.jpa.hibernate.ddl-auto=update
+server.error.include-message=always
+server.error.include-binding-errors=never
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+
+#mail configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+springdoc.enable-hateoas=true
