implemented user analysis and reporting
Signed-off-by: kamarbaraka <kamar254baraka@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,33 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/issue_management_system
 spring.jpa.hibernate.ddl-auto=update
+
+#server config
 server.error.include-message=always
 server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
+server.http2.enabled=true
 
-
+server.servlet.context-path=/api/
 #mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+springdoc.api-docs.groups.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.packages-to-scan=com.kamar.issuemanagementsystem
+#springdoc.swagger-ui.url=/docs/
+
+#hateoas config
+spring.hateoas.use-hal-as-default-json-media-type=true
 springdoc.enable-hateoas=true
+springdoc.show-login-endpoint=true
+springdoc.show-oauth2-endpoints=true
+
+#vaadin config
+#vaadin.url-mapping=/app/
+vaadin.async-supported=true
+vaadin.exclude-urls=/api/**, /swagger-ui/**
