--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,10 @@ server.error.include-binding-errors=never
 server.error.include-stacktrace=never
 server.error.include-exception=false
 server.http2.enabled=true
+spring.profiles.active= production
 
-server.servlet.context-path=/api/
+#server.servlet.context-path=/this
+
 #mail configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -28,6 +30,9 @@ springdoc.show-login-endpoint=true
 springdoc.show-oauth2-endpoints=true
 
 #vaadin config
-#vaadin.url-mapping=/app/
+#vaadin.url-mapping=/app
 vaadin.async-supported=true
-vaadin.exclude-urls=/api/**, /swagger-ui/**
+#vaadin.whitelisted-packages=com/kamar/issuemanagementsystem/views
+vaadin.devmode-caching=false
+vaadin.productionMode=true
+vaadin.exclude-urls= /api/**, /swagger-ui/**
