refined the rest service.
Signed-off-by: kamarbaraka <kamar254baraka@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,11 @@ spring.jpa.open-in-view=true
 #innit user config
 app.init.department-name=INIT
 
+#company config
+app.company.name=IMS
+app.company.email=kamar254baraka@gmail.com
+app.company.end-tag=IMS support team
+
 #server config
 server.error.include-message=always
 server.error.include-binding-errors=never
