added department reference to the ticket.
Signed-off-by: kamarbaraka <kamar254baraka@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ app.init.department-name=INIT
 app.company.name=IMS
 app.company.email=kamar254baraka@gmail.com
 app.company.end-tag=IMS support team
+app.init.department-email=fintechcorpltd@gmail.com
 
 #server config
 server.error.include-message=always
