--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 #import credentials
 spring.config.import=optional:credentials.yaml
 
+spring.threads.virtual.enabled=true
+
 #configure the datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/issue_management
 spring.jpa.hibernate.ddl-auto=update
