--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.config.import=optional:credentials.yaml
 spring.threads.virtual.enabled=true
 
 #configure the datasource
+spring.sql.init.mode=always
+#spring.datasource.hikari.connection-init-sql=create schema if not exists issue_management;
 spring.datasource.url=jdbc:mysql://localhost:3306/issue_management
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
@@ -13,6 +15,7 @@ spring.jpa.open-in-view=true
 app.init.department-name=INIT
 
 #company config
+app.init.db-url="jdbc:mysql://localhost:3306"
 app.company.name=IMS
 app.company.email=kamar254baraka@gmail.com
 app.company.end-tag=IMS support team
