--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,6 @@
 
 spring.threads.virtual.enabled=true
+spring.config.import=optional:credentials.yaml
 
 #configure the datasource
 spring.sql.init.mode=always
